# irc-downloader

./: Cargo.toml
frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs
frontend/src/: App.svelte  app.css
src/: dcc.rs  main.rs  server.rs
