[package]
name = "irc_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
axum = "0.6.12"
dashmap = "5.4.0"
futures-util = "0.3.27"
irc = { git = "https://github.com/aatxe/irc.git" }
lazy_static = "1.4.0"
log = "0.4.17"
regex = "1.7.3"
reqwest = "0.11.16"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
simple_logger = "4.1.0"
tokio = { version = "1.26.0", features = ["full"] }
tokio-stream = { version = "0.1.12", features = ["sync"] }
toml = "0.7.3"
tower-http = { version = "0.4.0", features = ["fs"] }


[dev-dependencies]
itertools = "0.10.5"
